# tree-similiarity-experiments

./: .gitignore  CMakeLists.txt  README.md  TODOS  simple_trees.txt  viz.ipynb
configs/: ted_algs_test.json
configs/icde2019/: bolzano.json  dblp.json  dblp_var_size.json  python.json  sentiment.json  swissprot.json
configs/icde2019/sentiment_rsb_k/: sentiment_t10.json  sentiment_t12.json  sentiment_t14.json  sentiment_t2.json  sentiment_t4.json  sentiment_t6.json  sentiment_t8.json
configs/icde2019/sentiment_rsc_k/: sentiment_t10.json  sentiment_t12.json  sentiment_t14.json  sentiment_t2.json  sentiment_t4.json  sentiment_t6.json  sentiment_t8.json
configs/icde2019/upperbound/: dblp_sed_cted.json  sentiment_sed_cted.json
configs/icde2019_histo/: bolzano.json  dblp.json  python.json  python_missing.json  sentiment.json  sentiment_APTED.json  swissprot.json  swissprot_missing.json
configs/icde2019_revision/: bolzano.json  bolzano_guha.json  dblp.json  dblp_10k_t1_guha_rsb.json  dblp_10k_t1_guha_rsc.json  dblp_10k_t2_guha_rsb.json  dblp_10k_t2_guha_rsc.json  python.json  python10000.json  sentiment.json  sentiment_guha.json  swissprot.json  swissprot10000.json
configs/icde2019_revision/sentiment_guha_k/: sentiment_t10.json  sentiment_t12.json  sentiment_t14.json  sentiment_t2.json  sentiment_t4.json  sentiment_t6.json  sentiment_t8.json
configs/icde2019_revision/sentiment_rsc_k/: sentiment_t10.json  sentiment_t12.json  sentiment_t14.json  sentiment_t2.json  sentiment_t4.json  sentiment_t6.json  sentiment_t8.json
configs/icde2019_revision/upperbound/: dblp.json  sentiment.json
db/: create_db.sql  create_db_ted_algs.sql
src/: experiments.cc  experiments.h  experiments.py  local_experiments.py  register.py  register_dataset.py
src/join_algs/: join_algs_experiments.cc  join_algs_experiments.h  join_algs_experiments.py  local_experiments.py
src/lb/: candidates_compare.cpp  indexer_test.cpp  query_validate.cpp  sed_benchmark.cpp  ted_ds_dist.cpp  ted_ds_dist.h  ted_lb_experiments.cpp  ted_lb_experiments.h
src/plots/: call_plot.sh  call_plot_histogram.sh  call_plot_revision.sh  create_all_plots.sh  plot_experiments.py  plot_experiments_n.py
src/plots/configs/fpr/: fpr_bolzano.json  fpr_dblp.json  fpr_python.json  fpr_sentiment.json  fpr_swissprot.json
src/plots/configs/pairs/: tree_pairs_bolzano.json  tree_pairs_dblp.json  tree_pairs_python.json  tree_pairs_sentiment.json  tree_pairs_swissprot.json
src/plots/configs/times/: times_bolzano.json  times_dblp.json  times_python.json  times_sentiment.json  times_swissprot.json
src/plots/configs/upperbound/: dblp_error.json  dblp_runtime.json  dblp_runtime_k.json  dblp_ted.json  python_runtime.json  python_runtime_k.json  sentiment_error.json  sentiment_runtime.json  sentiment_runtime_k.json  sentiment_ted.json  swissprot_runtime.json  swissprot_runtime_k.json
src/plots/configs_histograms/cand_times/: cand_times_bolzano.json  cand_times_dblp_10000.json  cand_times_python_10000.json  cand_times_sentiment.json  cand_times_swissprot_10000.json
src/plots/configs_histograms/cand_times_conv/: cand_times_conv_bolzano.json  cand_times_conv_dblp_10000.json  cand_times_conv_python_10000.json  cand_times_conv_sentiment.json  cand_times_conv_swissprot_10000.json
src/plots/configs_histograms/candidates/: candidates_bolzano.json  candidates_dblp_10000.json  candidates_python_10000.json  candidates_sentiment.json  candidates_swissprot_10000.json
src/plots/configs_histograms/candidatesub/: candidatesub_bolzano.json  candidatesub_dblp_10000.json  candidatesub_python_10000.json  candidatesub_sentiment.json  candidatesub_swissprot_10000.json
src/plots/configs_histograms/fpr/: fpr_bolzano.json  fpr_dblp_10000.json  fpr_python_10000.json  fpr_sentiment.json  fpr_swissprot_10000.json
src/plots/configs_histograms/pairs/: tree_pairs_bolzano.json  tree_pairs_dblp.json  tree_pairs_python.json  tree_pairs_swissprot.json
src/plots/configs_histograms/times/: times_bolzano.json  times_dblp_10000.json  times_python_10000.json  times_sentiment.json  times_swissprot_10000.json
src/plots/configs_histograms/upperbound/: dblp_error.json  dblp_runtime.json  sentiment_runtime.json  sentiment_runtime_k.json
src/plots/configs_paper/cand_times/: cand_times_dblp.json  cand_times_dblp_size_t6.json  cand_times_python.json  cand_times_sentiment.json  cand_times_swissprot.json
src/plots/configs_paper/candidates/: candidates_dblp.json  candidates_dblp_size_t6.json  candidates_python.json  candidates_sentiment.json  candidates_swissprot.json
src/plots/configs_paper/join_times/: times_dblp.json  times_dblp_size_t6.json  times_python.json  times_sentiment.json  times_swissprot.json
src/plots/configs_paper/upperbound/: dblp_error.json  dblp_runtime.json  sentiment_error.json  sentiment_runtime.json
src/plots/configs_revision/: var_data_size_new.json
src/plots/configs_revision/cand_times/: cand_times_bolzano.json  cand_times_dblp.json  cand_times_dblp_10000.json  cand_times_python.json  cand_times_python_10000.json  cand_times_sentiment.json  cand_times_swissprot.json  cand_times_swissprot_10000.json
src/plots/configs_revision/cand_times_conv/: cand_times_conv_bolzano.json  cand_times_conv_dblp.json  cand_times_conv_dblp_10000.json  cand_times_conv_python.json  cand_times_conv_python_10000.json  cand_times_conv_sentiment.json  cand_times_conv_swissprot.json  cand_times_conv_swissprot_10000.json
src/plots/configs_revision/candidates/: candidates_bolzano.json  candidates_dblp.json  candidates_dblp_10000.json  candidates_metric_sentiment.json  candidates_python.json  candidates_python_10000.json  candidates_sentiment.json  candidates_swissprot.json  candidates_swissprot_10000.json
src/plots/configs_revision/fpr/: fpr_bolzano.json  fpr_dblp.json  fpr_dblp_10000.json  fpr_python.json  fpr_python_10000.json  fpr_sentiment.json  fpr_swissprot.json  fpr_swissprot_10000.json
src/ted_algs/: plot_json.py  refresh_materialized_views.sql  ted_algs_experiments.cc  ted_algs_experiments.h  ted_algs_experiments.py  view_queries.sql
(+48 files in other folders)
